Mise à jour du site x1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="L'instant de Doriane - Institut d'esthétique au Cannet. Soins du visage, soins du corps, épilation, manucure, pédicure et plus encore.">
-    <title>L'instant de Doriane - Institut d'esthétique</title>
+    <meta name="description" content="L'instant de Doriane - Salon de beauté à Cannes. Soins du visage, soins du corps, épilation, manucure, pédicure et plus encore.">
+    <title>L'instant de Doriane - Salon de beauté</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -324,14 +324,14 @@
                 </div>
                 <div class="social-media">
                     <!-- Logo Instagram supprimé -->
-                    <a href="pages/compte/connexion.html" class="login-link"><i class="fas fa-user"></i> <span style="color: #ffffff;">Connexion</span></a>
+
                 </div>
             </div>
             <div class="main-header">
                 <div class="logo">
                     <a href="index.html">
                         <h1 style="font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.8rem; color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); letter-spacing: 1px; margin-bottom: 5px;">L'instant de <span style="color: #ffffff;">Doriane</span></h1>
-                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Institut d'esthétique</p>
+                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Salon de beauté</p>
                     </a>
                 </div>
                 <nav class="main-nav">
@@ -347,10 +347,16 @@
                         <li><a href="pages/galerie/index.html">Galerie</a></li>
                         <li><a href="pages/a-propos/index.html">Valeurs</a></li>
                         <li><a href="pages/contact/index.html">Contact</a></li>
+                        <li><a href="https://www.planity.com/linstant-de-doriane-06400-cannes" target="_blank" class="reservation-btn" style="background: linear-gradient(45deg, #4a7c59, #3a6348); padding: 10px 15px; border-radius: 50px; color: white; font-weight: 600;"><i class="far fa-calendar-alt" style="margin-right: 5px;"></i> Réserver</a></li>
+                    <style>
+                        .reservation-btn::after {
+                            display: none !important;
+                        }
+                    </style>
                     </ul>
                 </nav>
-                <div class="cta-button">
-                    <a href="pages/contact/index.html#reservation" class="btn btn-primary">Réserver</a>
+                <div class="cta-button" style="display: none;">
+                    <!-- Bouton de réservation supprimé pour éviter la duplication -->
                 </div>
             </div>
         </div>
@@ -360,7 +366,7 @@
     <section class="hero-section main-content">
         <div class="hero-content">
             <h1 class="hero-title" style="color: #ffffff; text-decoration: underline; text-underline-offset: 8px;">L'instant de <span style="color: #4a7c59;">Doriane</span></h1>
-            <p class="hero-subtitle">Votre institut d'esthétique au Cannet pour des moments de beauté et de bien-être</p>
+            <p class="hero-subtitle">Votre Salon de beauté à Cannes pour des moments de beauté et de bien-être</p>
             <div class="hero-buttons">
                 <a href="pages/services/index.html" class="btn btn-primary" style="transition: all 0.3s ease;">Découvrir nos services</a>
                 <a href="pages/contact/index.html#reservation" class="btn btn-secondary" style="background: linear-gradient(45deg, #4a7c59, #d4af37); border: none; color: white; transition: all 0.3s ease;">Prendre rendez-vous</a>
@@ -402,7 +408,7 @@
                     <div class="feature-icon">
                         <i class="fas fa-female"></i>
                     </div>
-                    <h3 class="feature-title">Épilation</h3>
+                    <h3 class="feature-title">Épilations</h3>
                     <p class="feature-text">Découvrez mes différentes techniques d'épilation :</p>
                     <ul class="feature-list">
                         <li>Épilation au fil de coton, une technique ancestrale</li>
@@ -463,7 +469,7 @@
                     <div class="service-icon" style="background: linear-gradient(45deg, #d4af37, #b8860b); width: 70px; height: 70px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; color: white; font-size: 24px;">
                         <i class="fas fa-paint-brush"></i>
                     </div>
-                    <h3 style="color: #ffffff;">Manucure & Pédicure</h3>
+                    <h3 style="color: #ffffff;">Manucure & Beauté des pieds</h3>
                     <p style="color: #ffffff;">Soins des mains et des pieds, pose de vernis classique ou semi-permanent.</p>
                     <a href="pages/services/index.html#visage" class="service-link" style="color: #ffffff;">Voir les soins <i class="fas fa-arrow-right"></i></a>
                 </div>
@@ -472,14 +478,14 @@
                         <i class="fas fa-eye"></i>
                     </div>
                     <h3 style="color: #ffffff;">Extensions de cils</h3>
-                    <p style="color: #ffffff;">Cil à cil ou volume russe, pour un regard intense et naturel.</p>
+                    <p style="color: #ffffff;">Extensions de cils pour un regard intense et naturel.</p>
                     <a href="pages/services/index.html#visage" class="service-link" style="color: #ffffff;">Voir les soins <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="service-card" style="background-color: rgba(212, 175, 55, 0.5); border-radius: 10px; padding: 30px; box-shadow: none; transition: all 0.3s ease; border: 1px solid rgba(212, 175, 55, 0.6); margin-bottom: 20px;">
                     <div class="service-icon" style="background: linear-gradient(45deg, #d4af37, #b8860b); width: 70px; height: 70px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px; color: white; font-size: 24px;">
                         <i class="fas fa-female"></i>
                     </div>
-                    <h3 style="color: #ffffff;">Épilation</h3>
+                    <h3 style="color: #ffffff;">Épilations</h3>
                     <p style="color: #ffffff;">Je vous propose trois méthodes adaptées à vos besoins : Épilation au fil de coton (visage), Épilation à la cire traditionnelle, Épilation à la cire avec bandes.</p>
                     <a href="pages/services/index.html#visage" class="service-link" style="color: #ffffff;">Voir les soins <i class="fas fa-arrow-right"></i></a>
                 </div>
@@ -1061,18 +1067,18 @@
                 <div class="footer-services">
                     <h4>Nos services</h4>
                     <ul>
-                        <li><a href="pages/services/index.html#epilation">Épilation</a></li>
-                        <li><a href="pages/services/index.html#manucure">Manucure & Pédicure</a></li>
+                        <li><a href="pages/services/index.html#epilation">Épilations</a></li>
+                        <li><a href="pages/services/index.html#manucure">Manucure & Beauté des pieds</a></li>
                         <li><a href="pages/tarifs/index.html">Voir les tarifs</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 14 rue Henri Germain, 06110 Le Cannet</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 9 boulevard Carnot, 06400 Cannes</li>
                         <li><i class="fas fa-phone-alt"></i> <a href="tel:+33762671020">07.62.67.10.20</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:linstantdedoriane@yahoo.com">linstantdedoriane@yahoo.com</a></li>
-                        <li><i class="fas fa-clock"></i> Lundi: 9h - 13h<br>Mardi à Samedi: 9h - 19h<br>Service à domicile disponible</li>
+                        <li><i class="fas fa-clock"></i> Lundi: 9h - 14h<br>Mardi au Samedi: 10h - 19h</li>
                     </ul>
                 </div>
             </div>
