--- a/pages/a-propos/index.html
+++ b/pages/a-propos/index.html
@@ -47,7 +47,7 @@
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Découvrez L'instant de Doriane - Institut d'esthétique au Cannet, notre histoire et notre équipe">
+    <meta name="description" content="Découvrez L'instant de Doriane - Salon de beauté à Cannes, notre histoire et notre équipe">
     <title>À propos - L'instant de Doriane</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -409,14 +409,14 @@
                 </div>
                 <div class="social-media">
                     <!-- Logo Instagram supprimé -->
-                    <a href="../compte/connexion.html" class="login-link"><i class="fas fa-user"></i> <span style="color: #ffffff;">Connexion</span></a>
+
                 </div>
             </div>
             <div class="main-header">
                 <div class="logo">
                     <a href="../../index.html">
                         <h1 style="font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.8rem; color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); letter-spacing: 1px; margin-bottom: 5px;">L'instant de <span style="color: #ffffff;">Doriane</span></h1>
-                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Institut d'esthétique</p>
+                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Salon de beauté</p>
                     </a>
                 </div>
                 <nav class="main-nav">
@@ -432,10 +432,16 @@
                         <li><a href="../galerie/index.html">Galerie</a></li>
                         <li><a href="../a-propos/index.html" class="active">Valeurs</a></li>
                         <li><a href="../contact/index.html">Contact</a></li>
+                        <li><a href="https://www.planity.com/linstant-de-doriane-06400-cannes" target="_blank" class="reservation-btn" style="background: linear-gradient(45deg, #4a7c59, #3a6348); padding: 10px 15px; border-radius: 50px; color: white; font-weight: 600;"><i class="far fa-calendar-alt" style="margin-right: 5px;"></i> Réserver</a></li>
+                    <style>
+                        .reservation-btn::after {
+                            display: none !important;
+                        }
+                    </style>
                     </ul>
                 </nav>
-                <div class="cta-button">
-                    <a href="../contact/index.html#reservation" class="btn btn-primary">Réserver</a>
+                <div class="cta-button" style="display: none;">
+                    <!-- Bouton de réservation supprimé pour éviter la duplication -->
                 </div>
             </div>
         </div>
@@ -464,7 +470,7 @@
                 </div>
                 <div class="about-text">
                     <h2>Notre histoire<span class="heading-frame"></span></h2>
-                    <p>Bienvenue à <strong>L'instant de Doriane</strong>, votre institut d'esthétique au cœur du Cannet. Fondé par Doriane, passionnée d'esthétique et de bien-être, notre institut est né d'une vision simple : offrir des soins de beauté personnalisés dans un cadre élégant et apaisant.</p>
+                    <p>Bienvenue à <strong>L'instant de Doriane</strong>, votre Salon de beauté au cœur de Cannes. Fondé par Doriane, passionnée d'esthétique et de bien-être, notre salon est né d'une vision simple : offrir des soins de beauté personnalisés dans un cadre élégant et apaisant.</p>
                     <p>Après plusieurs années d'expérience dans le domaine de l'esthétique, Doriane a décidé de créer son propre espace où chaque cliente pourrait se sentir unique et choyée. Depuis notre ouverture, nous nous efforçons d'offrir des prestations de qualité avec des produits haut de gamme sélectionnés avec soin.</p>
                     <p>Notre équipe est composée de professionnelles qualifiées et passionnées, toujours à l'écoute de vos besoins et désirs. Nous nous formons régulièrement aux dernières techniques et tendances pour vous proposer ce qu'il y a de mieux.</p>
                 </div>
@@ -509,18 +515,18 @@
                 <div class="footer-services">
                     <h4>Nos services</h4>
                     <ul>
-                        <li><a href="../services/index.html#epilation">Épilation</a></li>
-                        <li><a href="../services/index.html#manucure">Manucure & Pédicure</a></li>
+                        <li><a href="../services/index.html#epilation">Épilations</a></li>
+                        <li><a href="../services/index.html#manucure">Manucure & Beauté des pieds</a></li>
                         <li><a href="../tarifs/index.html">Voir les tarifs</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 14 rue Henri Germain, 06110 Le Cannet</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 9 boulevard Carnot, 06400 Cannes</li>
                         <li><i class="fas fa-phone-alt"></i> <a href="tel:+33762671020">07.62.67.10.20</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:linstantdedoriane@yahoo.com">linstantdedoriane@yahoo.com</a></li>
-                        <li><i class="fas fa-clock"></i> Lundi: 9h - 13h<br>Mardi à Samedi: 9h - 19h<br>Service à domicile disponible</li>
+                        <li><i class="fas fa-clock"></i> Lundi: 9h - 14h<br>Mardi au Samedi: 10h - 19h</li>
                     </ul>
                 </div>
             </div>
