--- a/pages/compte/connexion.html
+++ b/pages/compte/connexion.html
@@ -295,7 +295,7 @@
                 <div class="logo">
                     <a href="../../index.html">
                         <h1 style="font-family: 'Playfair Display', serif; font-weight: 700; font-size: 2.8rem; color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); letter-spacing: 1px; margin-bottom: 5px;">L'instant de <span style="color: #ffffff;">Doriane</span></h1>
-                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Institut d'esthétique</p>
+                        <p style="font-family: 'Poppins', sans-serif; color: #000000; font-size: 1.4rem; font-style: italic; letter-spacing: 1px;">Salon de beauté</p>
                     </a>
                 </div>
                 <nav class="main-nav">
@@ -411,18 +411,18 @@
                 <div class="footer-services">
                     <h4>Nos services</h4>
                     <ul>
-                        <li><a href="../services/index.html#epilation">Épilation</a></li>
-                        <li><a href="../services/index.html#manucure">Manucure & Pédicure</a></li>
+                        <li><a href="../services/index.html#epilation">Épilations</a></li>
+                        <li><a href="../services/index.html#manucure">Manucure & Beauté des pieds</a></li>
                         <li><a href="../tarifs/index.html">Voir les tarifs</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 14 rue Henri Germain, 06110 Le Cannet</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 9 boulevard Carnot, 06400 Cannes</li>
                         <li><i class="fas fa-phone-alt"></i> <a href="tel:+33762671020">07.62.67.10.20</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:linstantdedoriane@yahoo.com">linstantdedoriane@yahoo.com</a></li>
-                        <li><i class="fas fa-clock"></i> Lundi: 9h - 13h<br>Mardi à Samedi: 9h - 19h<br>Service à domicile disponible</li>
+                        <li><i class="fas fa-clock"></i> Lundi: 9h - 14h<br>Mardi au Samedi: 10h - 19h</li>
                     </ul>
                 </div>
             </div>
