--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -199,7 +199,7 @@
             <p>Si vous avez des questions concernant cette politique de confidentialité, veuillez nous contacter :</p>
             <ul>
                 <li>Par e-mail : <a href="mailto:privacy@beaute-elegance.fr">privacy@beaute-elegance.fr</a></li>
-                <li>Par courrier : L'instant de Doriane, 14 rue Henri Germain, 06110 Le Cannet</li>
+                <li>Par courrier : L'instant de Doriane, 9 boulevard Carnot, 06400 Cannes</li>
                 <li>Par téléphone : 07.62.67.10.20</li>
             </ul>
             
@@ -240,10 +240,10 @@
                 <div class="footer-contact">
                     <h4>Contact</h4>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 14 rue Henri Germain, 06110 Le Cannet</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 9 boulevard Carnot, 06400 Cannes</li>
                         <li><i class="fas fa-phone-alt"></i> <a href="tel:+33762671020">07.62.67.10.20</a></li>
                         <li><i class="fas fa-envelope"></i> <a href="mailto:contact@beaute-elegance.fr">contact@beaute-elegance.fr</a></li>
-                        <li><i class="fas fa-clock"></i> Lundi: 9h - 13h<br>Mardi à Samedi: 9h - 19h<br>Service à domicile disponible</li>
+                        <li><i class="fas fa-clock"></i> Lundi: 9h - 14h<br>Mardi au Samedi: 10h - 19h</li>
                     </ul>
                 </div>
             </div>
