--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -554,7 +554,7 @@
                         <i class="fas fa-envelope-open" style="color: #ffffff; font-size: 30px; margin-right: 20px;"></i>
                         <div class="info-text">
                             <h3 style="color: #d4af37; margin-bottom: 10px; font-size: 18px;">Email</h3>
-                            <p style="color: #ffffff; font-size: 16px; line-height: 1.5;"><a href="mailto:linstantdedoriane@gmail.com" style="color: #ffffff; text-decoration: none; font-weight: bold; font-size: 18px; transition: color 0.3s;" onmouseover="this.style.color='#d4af37'" onmouseout="this.style.color='#ffffff'">linstantdedoriane@gmail.com</a></p>
+                            <p style="color: #ffffff; font-size: 16px; line-height: 1.5;"><a href="mailto:linstantdedoriane@gmail.com" style="color: #ffffff; text-decoration: none; font-weight: bold; font-size: 18px; transition: color 0.3s; word-break: break-word; display: inline-block; max-width: 100%;" onmouseover="this.style.color='#d4af37'" onmouseout="this.style.color='#ffffff'">linstantdedoriane@gmail.com</a></p>
                         </div>
                     </div>
                     
@@ -656,7 +656,9 @@
                                 <div class="direction-icon" style="margin-right: 15px;"><i class="fas fa-car" style="color: #4a7c59; font-size: 24px;"></i></div>
                                 <div class="direction-text">
                                     <h4 style="color: #000000; margin-bottom: 5px; font-size: 16px;">En voiture</h4>
-                                    <p style="color: #ffffff;">Parking Cannes Saint-Nicolas - EFFIA à proximité (1 Rue de Mimont, ouvert 24h/24). Stationnement également possible dans les rues adjacentes.</p>
+                                    <p style="color: #ffffff; margin-bottom: 8px;"><strong>Parking Vauban</strong> : à 20m derrière l'immeuble<br>• 2 heures offertes en semaine<br>• 3 heures offertes le weekend</p>
+                                    <p style="color: #ffffff; margin-bottom: 8px;"><strong>Parking Cannes Saint-Nicolas - EFFIA</strong> : 1 Rue de Mimont<br>• Ouvert 24h/24</p>
+                                    <p style="color: #ffffff;">Stationnement également possible dans les rues adjacentes.</p>
                                 </div>
                             </div>
                             <div class="direction-item">
