--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -681,7 +681,7 @@
                         <p>Nous vous accueillons tout au long de la semaine pour vos soins esthétiques.</p>
                     </div>
                     <div class="hours-container">
-                        <div class="hours-grid decorative-border pattern-dots">
+                        <div id="hours-grid" class="hours-grid decorative-border pattern-dots">
                         <span class="corner-top-left"></span>
                         <span class="corner-top-right"></span>
                         <span class="corner-bottom-left"></span>
@@ -785,6 +785,7 @@
     <script src="../../js/script.js"></script>
     <script src="../../js/scroll-down.js"></script>
     <script src="../../js/animations.js"></script>
+    <script src="../../js/horaires-loader.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Gestion du défilement vers les ancres
