--- a/admin/index.html
+++ b/admin/index.html
@@ -1,38 +1,46 @@
 <!doctype html>
-<html lang="fr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Administration</title>
-    <!-- Decap CMS -->
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js" defer></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin - L'Instant de Doriane</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
     <style>
-      body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        font-family: Arial, Helvetica, sans-serif;
+      body { font-family: Arial, sans-serif; max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
+      .login-button { 
+        background: #00c7b7; 
+        color: white; 
+        padding: 0.5rem 1rem; 
+        border: none; 
+        border-radius: 4px; 
+        cursor: pointer; 
+        font-size: 1rem;
       }
-      .message {
-        font-size: 1.2rem;
-        color: #555;
-      }
+      .login-button:hover { background: #00a396; }
     </style>
   </head>
   <body>
-    <div id="nc-root"></div>
-    <p class="message">Chargement de l'interface d'administration…</p>
+    <div id="netlify-identity-widget"></div>
     <script>
-      /* Redirige vers la page d'admin après connexion */
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", user => {
-          if (!user) {
-            window.netlifyIdentity.on("login", () => {
-              document.location.href = "/admin/";
-            });
-          }
-        });
-      }
+      document.addEventListener('DOMContentLoaded', function() {
+        if (window.netlifyIdentity) {
+          netlifyIdentity.on('init', function(user) {
+            if (!user) {
+              netlifyIdentity.on('login', function() {
+                document.location.href = '/admin/';
+              });
+              
+              // Affiche le widget manuellement si nécessaire
+              if (window.location.hash === '#recover') {
+                netlifyIdentity.open('recover');
+              } else if (window.location.hash.includes('recovery_token=')) {
+                netlifyIdentity.open('recover');
+              }
+            }
+          });
+        }
+      });
     </script>
   </body>
 </html>
