--- a/admin/recover.html
+++ b/admin/recover.html
@@ -1,24 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <title>Réinitialisation du mot de passe</title>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-</head>
-<body>
-  <div id="netlify-identity-widget"></div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      if (window.netlifyIdentity) {
-        netlifyIdentity.on('init', function(user) {
-          if (!user) {
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Réinitialisation du mot de passe - L'Instant de Doriane</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <style>
+      body { 
+        font-family: Arial, sans-serif; 
+        max-width: 600px; 
+        margin: 2rem auto; 
+        padding: 0 1rem; 
+        text-align: center;
+      }
+      #netlify-identity-widget {
+        margin: 2rem 0;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Réinitialisation du mot de passe</h1>
+    <p>Utilisez le formulaire ci-dessous pour réinitialiser votre mot de passe.</p>
+    <div id="netlify-identity-widget"></div>
+    
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        if (window.netlifyIdentity) {
+          netlifyIdentity.on('init', function(user) {
+            netlifyIdentity.open('recover');
+            
             netlifyIdentity.on('login', function() {
               document.location.href = '/admin/';
             });
-          }
-        });
-      }
-    });
-  </script>
-</body>
+          });
+        }
+      });
+    </script>
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  </body>
 </html>
