--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin - L'Instant de Doriane</title>
+    <link rel="stylesheet" href="/admin/cms.css" />
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
       body { font-family: Arial, sans-serif; max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
