--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,94 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin - L'Instant de Doriane</title>
-    <link rel="stylesheet" href="/admin/cms.css" />
+    <style>
+      /* === Thème admin vert & or === */
+      :root {
+        --primary-color: #4a7c59;   /* Vert principal */
+        --secondary-color: #d4af37; /* Or doux */
+        --accent-color: #f6f5f0;    /* Beige clair */
+        --text-color: #2d3748;      /* Gris foncé */
+        --success-color: #4a7c59;   /* Succès */
+      }
+
+      /* En-tête */
+      .CMS_Header_root {
+        background-color: var(--primary-color) !important;
+        color: #fff !important;
+        border-bottom: none !important;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      }
+
+      /* Boutons primaires */
+      .CMS_Button_primary {
+        background: linear-gradient(45deg, var(--primary-color), var(--secondary-color)) !important;
+        border: none !important;
+        color: #fff !important;
+      }
+      .CMS_Button_primary:hover {
+        filter: brightness(1.1) !important;
+        transform: translateY(-1px) !important;
+      }
+
+      /* Menu latéral */
+      .CMS_Sidebar_root {
+        background-color: var(--accent-color) !important;
+        border-right: 1px solid rgba(0,0,0,0.05) !important;
+      }
+      .CMS_Sidebar_nav-item-active {
+        background-color: rgba(0,0,0,0.05) !important;
+        color: var(--primary-color) !important;
+        border-left: 3px solid var(--secondary-color) !important;
+      }
+
+      /* Cartes de contenu */
+      .CMS_Card_root {
+        border: 1px solid #e2e8f0 !important;
+        border-radius: 8px !important;
+        transition: transform 0.2s, box-shadow 0.2s !important;
+      }
+      .CMS_Card_root:hover {
+        transform: translateY(-2px) !important;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1) !important;
+      }
+
+      /* Champs de formulaire */
+      .CMS_TextInput_input,
+      .CMS_Textarea_textarea,
+      .CMS_Select_select {
+        border: 1px solid #e2e8f0 !important;
+        border-radius: 4px !important;
+        padding: 8px 12px !important;
+      }
+      .CMS_TextInput_input:focus,
+      .CMS_Textarea_textarea:focus,
+      .CMS_Select_select:focus {
+        border-color: var(--primary-color) !important;
+        box-shadow: 0 0 0 2px rgba(74, 124, 89, 0.2) !important;
+      }
+
+      /* Bouton de publication */
+      .CMS_WorkflowPublish_publishButton {
+        background-color: var(--success-color) !important;
+        border-color: var(--success-color) !important;
+      }
+
+      /* Animation de chargement */
+      @keyframes pulse {
+        0% { opacity: 0.6; }
+        50% { opacity: 1; }
+        100% { opacity: 0.6; }
+      }
+      .CMS_Loading_loading {
+        animation: pulse 1.5s ease-in-out infinite !important;
+      }
+
+      /* Responsive */
+      @media (max-width: 768px) {
+        .CMS_Sidebar_root { width: 220px !important; }
+        .CMS_Header_root { padding: 0 1rem !important; }
+      }
+    </style>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
       body { font-family: Arial, sans-serif; max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
