--- a/admin/index.html
+++ b/admin/index.html
@@ -130,5 +130,7 @@
       });
     </script>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <!-- Styles perso séparées -->
+    <link rel="stylesheet" href="cms.css" />
   </body>
 </html>
